--- a/.github/workflows/workflow_variables.yaml
+++ b/.github/workflows/workflow_variables.yaml
@@ -12,6 +12,6 @@ jobs:
       Greeting: Hello
     steps:
       - name: "Say Hello"
-        run: echo "$Greeting $First_Name is using $cloud!"
+        run: echo "$Greeting! $First_Name is using $cloud!"
         env:
           First_Name: Szovat
