--- a/.github/workflows/user_input.yml
+++ b/.github/workflows/user_input.yml
@@ -20,14 +20,14 @@ on:
         # Input has to be provided for the workflow to run
         required: true
   
-  jobs:
-    add_numbers:
-      runs-on: ubuntu-latest
+jobs:
+  add_numbers:
+    runs-on: ubuntu-latest
 
-      steps:
-        - name: Add numbers
-          id: sum
-          run: echo ":::set-output name=sum::$((${{ inputs.number1 }} + ${{ inputs.number2 }}))"
-
-        - name: Display sum
-          run: echo "The sum of ${{ inputs.number1 }} and ${{ inputs.number2 }} is ${{ steps.sum.outputs.sum }}"
+    steps:
+      - name: Add numbers
+        id: sum
+        run: echo "::set-output name=sum::$((${{ inputs.number1 }} + ${{ inputs.number2 }}))"
+      
+      - name: Display sum
+        run: echo "The sum of ${{ inputs.number1 }} and ${{ inputs.number2 }} is ${{ steps.sum.outputs.sum }}"
